test/errmsg/negative-size-array.c
// negative-size-array.c
// Array declared to have negative size.

int arr0[-3];

// EOF
